--- a/css/new_file.css
+++ b/css/new_file.css
@@ -7,15 +7,13 @@ body {
 	width:80% ;
 	margin-left: auto;
 	margin-right: auto;
-	background-image: url(../img/utensils.jpg);
+	background-image: url(../img/home.jpg);
+	background-attachment:fixed;
 }
 .nav-pills {
 	float: right;
 }
-.title {
-	text-align: center;
-	color:#fff;
-}
+
 p {
 	color:#FFFFFF;
 	font-size: 32px;
@@ -52,9 +50,14 @@ p {
 .btn-group-vertical{
 	width: 100%;
 }
-
+.textarea{
+	width: 100%;
+    height: 100%;
+}
  .title2 {
-	padding=0px;
+	width: 100%;
+    height: 100%;
+    color:black;
 }
 .slider {
 	width: 100%;
@@ -101,4 +104,36 @@ p {
     display:block;
       width: 40%;
     background-image: url(../img/926.jpg);
+}
+.box1 {
+
+	float: left;
+}
+.viewmeals{
+	width: 40%;
+	float:left;
+}
+.vieworder{
+	float:left;
+	width: 50%;
+	height: 100%;
+	font-style: italic;
+	
+}
+.logo{
+	width: 50%;
+	height: 100%;
+	    display:block;
+    margin-right: auto;
+    margin-left: auto;
+    
+}
+.about{
+	color: black ;
+    position: absolute;
+    width: 80%;
+    height:100%;
+    z-index: 1;
+    opacity: 0.8;
+      background-color: rgba(255, 255, 255, 0.15);
 }
